--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -10,4 +10,7 @@
     \item Added examples that uses the \dac{At} command.
       Making front page and other snacks
   \end{itemize}\\
+  v0.0.4b44&2018/04/03&\begin{itemize}
+    \item Changed design of part problems. (Looks much better now!)
+  \end{itemize}\\
 \end{tabularx}
