--- a/docs/exercisebank-doc.tex
+++ b/docs/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.0.3b42 - 2018/04/03
-%% The LaTeX package exercisebank - version v0.0.3 (2018/04/03) build 42
+%% exercisebank v0.0.4b44 - 2018/04/03
+%% The LaTeX package exercisebank - version v0.0.4 (2018/04/03) build 44
 %% exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -42,7 +42,7 @@
       \path[fill=yellow!50!black,draw=none] (interior.south west) rectangle node[white]{\Huge\bfseries !} ([xshift=4mm]interior.north west);
       },
     drop fuzzy shadow,#1}
- \title{Exercise bank - Manual\\{\normalsize v0.0.3}}
+ \title{Exercise bank - Manual\\{\normalsize v0.0.4}}
  \makeatother
 \let\dac\docAuxCommand
 \tcbset{documentation listing style=mydocumentation}
@@ -54,7 +54,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{Handin - manual\\ v0.0.3{\\[-0.5em]\footnotesize(build 42)}}}
+\title{{Handin - manual\\ v0.0.4{\\[-0.5em]\footnotesize(build 44)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -314,6 +314,9 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
   v0.0.3b40&2018/04/03&\begin{itemize}
     \item Added examples that uses the \dac{At} command.
       Making front page and other snacks
+  \end{itemize}\\
+  v0.0.4b44&2018/04/03&\begin{itemize}
+    \item Changed design of part problems. (Looks much better now!)
   \end{itemize}\\
 \end{tabularx}
  \end{document}
