--- a/exercisebank.sty
+++ b/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exerciseBank
-%% The LaTeX package exercisebank - version v0.0.3 (2018/04/03) - build 42
+%% The LaTeX package exercisebank - version v0.0.4 (2018/04/03) - build 44
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,7 +13,7 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/04/03 v0.0.3 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/04/03 v0.0.4 Creates a setup that gives freedom in making sets and exercises.]
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exbank}}
 }{}
 \gdef\setExercisesDir#1{\gdef\exercisesDir{#1}}
@@ -56,7 +56,8 @@
 \def\pMarginBelow{1em}
 \def\pMarginAbove{1em}
 \def\pMarginLeft{-1.5em}
-\def\ppMargin{1em}
+\def\ppMargin{2em}
+\def\ppPullback{3.5em}
 \def\solMargin{\dimexpr\ppMargin+\ppMargin\relax}
 \def\vsSize{1em}
 \def\vs{\vspace{\vsSize}}
@@ -72,12 +73,15 @@
   \vspace*{\pMarginBelow}
 }
 \At\VeryBeginPartproblem{	\vspace{\ppMargin}%
-	 \begin{addmargin}{\ppMargin}%
-\large\hspace*{-\ppMargin}\textbf{(\theproblemcounter\alph{partproblemcounter})}\normalsize
-  \stepcounter{partproblemcounter}
+\stepcounter{partproblemcounter}%
+\def\@pproblemHead{\textbf{(\theproblemcounter\alph{partproblemcounter})}}
+\addtolength{\leftmargin}{-\ppMargin}
+\begin{itemize}
+  \item[\@pproblemHead]
 }
 \At\EndPartproblem{\hfill
-\end{addmargin}\vspace*{0.5em}
+\end{itemize}
+\addtolength{\leftmargin}{\ppMargin}
 }
 \At\BeginSolution{  \vspace*{1em}
   \begin{addmargin}{\solMargin}%
