--- a/exercises/firstexercise.tex
+++ b/exercises/firstexercise.tex
@@ -3,12 +3,9 @@
 Info about the exercise...
 \end{intro}
 \begin{problem}
-Getting constant build errors?
+REMEMBER that \texttt{\string\end\{problem\}} can't have spaces in front of it and needs it's own line!
 \end{problem}
 %% REMEMBER that \end{solution} can't have spaces in front of it and needs it's own line
 \begin{solution}
 REMEMBER that \texttt{\string\end\{solution\}} can't have spaces in front of it and needs it's own line!
 \end{solution}
-\begin{problem}
-second of first
-\end{problem}
