--- a/exercises/secondexercise.tex
+++ b/exercises/secondexercise.tex
@@ -3,17 +3,17 @@
   In this exercise, we'll be looking at \( \dots \)
 \end{intro}
 \begin{problem}
-  2nd TEST1
+  Second exercise - problem this is not a chosen problem.
 \end{problem}
 \begin{problem}
-  2nd TEST2
+  Second exercise - this is not a chosen problem
 \end{problem}
 \begin{solution}
 SOLUTION2
 \end{solution}
 
 \begin{problem}
-  2nd TEST3
+  \lipsum[1]
   \begin{verbatim}
     VERBATIMTEXT3
   \end{verbatim}
@@ -22,8 +22,11 @@ SOLUTION3
 \end{solution}
 \end{problem}
 \begin{problem}
-  2nd TEST4
+  \lipsum[2-3]
 \end{problem}
 \begin{solution}
 SOLUTION4
 \end{solution}
+\begin{problem}
+  \lipsum[4]
+\end{problem}
