--- a/src/example.tex
+++ b/src/example.tex
@@ -1,8 +1,8 @@
 \documentclass{article}
 \usepackage{exercisebank}
+\usepackage{lipsum}
 %% The \makeset{setname}{exercises,to,include} picks exercises from the exercises-folder
 %% The \exclude{setname}{1,2,3,...,9} excludes partproblems 1,...,9 from setname
-
 \makeset{1}{firstexercise}
 \makeset{2}{firstexercise, \exclude{secondexercise}{1,2}, thirdexercise}
 \begin{document}
