--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -13,4 +13,7 @@
   v0.0.4b44&2018/04/03&\begin{itemize}
     \item Changed design of part problems. (Looks much better now!)
   \end{itemize}\\
+  v0.0.5b46&2018/04/03&\begin{itemize}
+    \item Fixed partproblems and solutions to fit on pages using \dac{filbreak}.
+  \end{itemize}\\
 \end{tabularx}
