--- a/src/main.tex
+++ b/src/main.tex
@@ -10,10 +10,10 @@
 \usepackage[english]{babel}
 \gdef\exercisesDir{../exercises}
 \input{preamble}
-
+\usepackage{lipsum}
 % \makeset{2}{secondexercise, firstexercise}
-% \makeset[intro]{2}{\exclude{secondexercise}{2,3}, firstexercise, \select{thirdexercise}{1,2}}
-\makeset[intro,nohead]{2}{\phead,\select{thirdexercise}{1,2,3},\exclude{secondexercise}{2,3},\phead,\select{firstexercise}{1}}
+\makeset[intro]{2}{\exclude{secondexercise}{2,3}, firstexercise, \select{thirdexercise}{1,2}}
+% \makeset[intro,nohead]{2}{\phead,\select{thirdexercise}{1,2,3},\exclude{secondexercise}{2,3},\phead,\select{firstexercise}{1}}
 % \makeset[intro]{2}{\exclude{secondexercise}{1}}
 \begin{document}
 \buildset{2}
