--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -2,13 +2,25 @@
 % This file contains \At-commands that are responsible for formatting
 % exercise headers and exercise-related styles.
 \makeatletter
-\def\ppLeading{4em}
-\def\pMarginBelow{1em}
-\def\pMarginAbove{1em}
-\def\pMarginLeft{-1.5em}
-\def\ppMargin{2em}
-\def\ppPullback{3.5em}
-\def\solMargin{\dimexpr \ppMargin+\ppMargin\relax}
+\newlength{\ppLeading}
+\newlength{\pMarginBelow}
+\newlength{\pMarginAbove}
+\newlength{\pMarginLeft}
+\newlength{\ppMarginBelow}
+\newlength{\ppMarginAbove}
+\newlength{\ppMargin}
+\newlength{\ppPullback}
+
+\setlength{\ppLeading}{4em}
+\setlength{\pMarginBelow}{1em}
+\setlength{\pMarginAbove}{1em}
+\setlength{\pMarginLeft}{-1.5em}
+\setlength{\ppMarginBelow}{2em}
+\setlength{\ppMarginAbove}{2em}
+\setlength{\ppMargin}{2em}
+
+\setlength{\ppPullback}{3.5em}
+\def\solMargin{\dimexpr \ppMargin\relax}
 \def\vsSize{1em}
 \def\vs{\vspace{\vsSize}}
 %:§count
@@ -20,33 +32,41 @@
 \newcounter{partproblemcounter}
 
 \At\VeryBeginProblem{
-  \stepcounter{problemcounter}
-  \setcounter{partproblemcounter}{1}
-  \vspace*{\pMarginAbove}
-  \begin{addmargin}{\pMarginLeft}
-    {\normalfont\Large\bfseries\@tr{Problem}~\theproblemcounter}
-  \end{addmargin}
-  \vspace*{\pMarginBelow}
+	\stepcounter{problemcounter}
+	\setcounter{partproblemcounter}{1}
+	\vspace*{\pMarginAbove}
+	\begin{addmargin}{\pMarginLeft}
+		{\normalfont\Large\bfseries\@tr{Problem}~\theproblemcounter}
+	\end{addmargin}
+	\vspace*{\pMarginBelow}
 }
-\At\VeryBeginPartproblem{
-	\vspace{\ppMargin}%
-\stepcounter{partproblemcounter}%
-	 % \begin{addmargin}{\ppMargin}%
-% \large\hspace*{-\ppPullback}\textbf{(\theproblemcounter\alph{partproblemcounter})}\normalsize
-\def\@pproblemHead{\textbf{(\theproblemcounter\alph{partproblemcounter})}}
-\addtolength{\leftmargin}{-\ppMargin}
-\begin{itemize}
-  \item[\@pproblemHead]
+\At\EndProblem{
+	\filbreak
 }
-\At\EndPartproblem{\hfill
-\end{itemize}
-\addtolength{\leftmargin}{\ppMargin}
+\At\VeryBeginPartproblem{%
+	\stepcounter{partproblemcounter}%
+	\def\@pproblemHead{\large\textbf{(\theproblemcounter\alph{partproblemcounter})}}
+	\begin{addmargin}{\ppMargin}
+		\filbreak
+		\begin{itemize}
+			\item[\@pproblemHead]
 }
+\At\EndPartproblem{
+		\end{itemize}
+	\end{addmargin}
+	\vspace*{\pMarginBelow}%
+}
+
 \At\BeginSolution{
-  \vspace*{1em}
-  \begin{addmargin}{\solMargin}%
-\hspace*{-\solMargin}\large{\textbf{\@tr{Solution}:}}\normalsize
+	% \@pens\@lowpenalty
+	\vspace*{1em}
+	\def\@solutionHead{\large{\textbf{\@tr{Solution}:}}}
+	\begin{addmargin}{\solMargin}
+		\filbreak
+		\begin{itemize}
+			\item[\@solutionHead]
 }
 \At\EndSolution{
-  \end{addmargin}\vspace*{1em}
+		\end{itemize}
+	\end{addmargin}
 }
