--- a/exercisebank.sty
+++ b/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exerciseBank
-%% The LaTeX package exercisebank - version v0.0.5 (2018/04/03) - build 46
+%% The LaTeX package exercisebank - version v0.0.6 (2018/04/03) - build 47
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,18 +13,9 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/04/03 v0.0.5 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/04/03 v0.0.6 Creates a setup that gives freedom in making sets and exercises.]
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exbank}}
 }{}
-\gdef\@pens#1{\interlinepenalty#1%
-\postdisplaypenalty#1%
-\interdisplaylinepenalty#1%
-\@beginparpenalty#1%
-\@endparpenalty#1%
-\@itempenalty#1%
-\@secpenalty#1%
-\interfootnotelinepenalty#1%
-}
 \gdef\setExercisesDir#1{\gdef\exercisesDir{#1}}
 \@ifundefined{exercisesDir}{\gdef\exercisesDir{exercises}
 }{}
@@ -180,6 +171,7 @@
     \Trigger\EndIntro
     \endgroup
   \fi
+  \vspace*{1em}
 }
 \gdef\isin#1#2#3#4{  \def\needle{#2}
   \def\haystack{#1}
