--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -16,4 +16,7 @@
   v0.0.5b46&2018/04/03&\begin{itemize}
     \item Fixed partproblems and solutions to fit on pages using \dac{filbreak}.
   \end{itemize}\\
+  @@VERSIONB&@@DATE&\begin{itemize}
+    \item Fixed title of documentation to match actual package.
+  \end{itemize}\\
 \end{tabularx}
