Removed default exercise directory. Closes #1

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -17,6 +17,7 @@
     \item Fixed partproblems and solutions to fit on pages using \dac{filbreak}.
   \end{itemize}\\
   @@VERSIONB&@@DATE&\begin{itemize}
+    \item {\Large Removed default exercise directory!} Use \dac{setExercisesDir}\brackets{exercises} if you used the package before @@DATE!
     \item Fixed title of documentation to match actual package.
   \end{itemize}\\
 \end{tabularx}
