--- a/src/main.tex
+++ b/src/main.tex
@@ -8,8 +8,8 @@
   % \@latex@warning{COMPILING EXBANK MAIN}
   \@latex@warning{COMPILING EXBANK MAIN}
 \usepackage[english]{babel}
-\gdef\exercisesDir{../exercises}
 \input{preamble}
+\setExercisesDir{../exercises}
 \usepackage{lipsum}
 % \makeset{2}{secondexercise, firstexercise}
 \makeset[intro]{2}{\exclude{secondexercise}{2,3}, firstexercise, \select{thirdexercise}{1,2}}
