--- a/src/example.tex
+++ b/src/example.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{exercisebank}
 \usepackage{lipsum}
+\setExercisesDir{exercises}
 %% The \makeset{setname}{exercises,to,include} picks exercises from the exercises-folder
 %% The \exclude{setname}{1,2,3,...,9} excludes partproblems 1,...,9 from setname
 \makeset{1}{firstexercise}
