Removed \filbreak from solution env. Fixes #7

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -19,5 +19,6 @@
   @@VERSIONB&@@DATE&\begin{itemize}
     \item {\Large Removed default exercise directory!} Use \dac{setExercisesDir}\brackets{exercises} if you used the package before @@DATE!
     \item Fixed title of documentation to match actual package.
+    \item Fixed weird paragraph styling when displaying solutions
   \end{itemize}\\
 \end{tabularx}
