- Added package options: part problems on/off tighten paragraphs true/false problem header part problem header solution header exercise directory
- Removed default exercise directory and prints hint in error if exercise file not found
- Deprecated \setExercisesDir and prints an error if this is used. \exercisebanksetup{exercise directory=directory} is superior

closes #4 and closes #5 and also affects #1

increased version number to 0.1.0

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -16,9 +16,10 @@
   v0.0.5b46&2018/04/03&\begin{itemize}
     \item Fixed partproblems and solutions to fit on pages using \dac{filbreak}.
   \end{itemize}\\
-  @@VERSIONB&@@DATE&\begin{itemize}
-    \item {\Large Removed default exercise directory!} Use \dac{setExercisesDir}\brackets{exercises} if you used the package before @@DATE!
+  @@VERSION&@@DATE&\begin{itemize}
+    \item \begin{marker}Backward incompability from v0.0.5:Removed default exercise directory! \end{marker} Use \dac{exercisebanksetup}\brackets{exercise directory=exercises} if you used the package before @@DATE!
     \item Fixed title of documentation to match actual package.
     \item Fixed weird paragraph styling when displaying solutions
+    \item Added a few package options. More to come!
   \end{itemize}\\
 \end{tabularx}
