--- a/docs/styling.tex
+++ b/docs/styling.tex
@@ -4,7 +4,7 @@
   moretexcs={arrayrulecolor,draw,includegraphics,ifthenelse,isodd,lipsum,path,pgfkeysalso},
   classoffset=1,
   moretexcs={% core
-    makeset,phead,buildset,select,exclude,Trigger,At,translateExBank
+    makeset,phead,buildset,select,exclude,Trigger,At,translateExBank,exercisebanksetup,exerciseFile
   },
   texcsstyle=*\color{Definition}\bfseries,
   classoffset=0,% restore default
