--- a/example.tex
+++ b/example.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{exercisebank}
 \usepackage{lipsum}
-\setExercisesDir{exercises}
+\exercisebanksetup{exercise directory=exercises}
 %% The \makeset{setname}{exercises,to,include} picks exercises from the exercises-folder
 %% The \exclude{setname}{1,2,3,...,9} excludes partproblems 1,...,9 from setname
 \makeset{1}{firstexercise}
