--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -36,20 +36,19 @@
 	\setcounter{partproblemcounter}{1}
 	\vspace*{\pMarginAbove}
 	\begin{addmargin}{\pMarginLeft}
-		{\normalfont\Large\bfseries\@tr{Problem}~\theproblemcounter}
+		{\exbank@opt@problemHeader}
 	\end{addmargin}
 	\vspace*{\pMarginBelow}
 }
 \At\EndProblem{
-	\filbreak
+	\if\exbank@opt@tightenparagraphs\isTrue\filbreak\fi
 }
 \At\VeryBeginPartproblem{%
 	\stepcounter{partproblemcounter}%
-	\def\@pproblemHead{\large\textbf{(\theproblemcounter\alph{partproblemcounter})}}
 	\begin{addmargin}{\ppMargin}
-		\filbreak
+		\if\exbank@opt@tightenparagraphs\isTrue\filbreak\fi
 		\begin{itemize}
-			\item[\@pproblemHead]
+			\item[\exbank@opt@partProblemHeader]
 }
 \At\EndPartproblem{
 		\end{itemize}
@@ -60,10 +59,9 @@
 \At\BeginSolution{
 	% \@pens\@lowpenalty
 	\vspace*{1em}
-	\def\@solutionHead{\large{\textbf{\@tr{Solution}:}}}
 	\begin{addmargin}{\solMargin}
 		\begin{itemize}
-			\item[\@solutionHead]
+			\item[\exbank@opt@solutionHeader]
 }
 \At\EndSolution{
 		\end{itemize}
