--- a/src/texpack.tex
+++ b/src/texpack.tex
@@ -1,5 +1,6 @@
 % This is the file that is built when making all these files into packaging
 %:§env=Environments
+%:§config=Configuration and options
 %:§lang=Internationalization
 %:§triggers=Triggers
 %:§ref=General reference
