--- a/src/main.tex
+++ b/src/main.tex
@@ -9,7 +9,7 @@
   \@latex@warning{COMPILING EXBANK MAIN}
 \usepackage[english]{babel}
 \input{preamble}
-\setExercisesDir{../exercises}
+\exercisebanksetup{exercise directory=../exercises}
 \usepackage{lipsum}
 % \makeset{2}{secondexercise, firstexercise}
 \makeset[intro]{2}{\exclude{secondexercise}{2,3}, firstexercise, \select{thirdexercise}{1,2}}
