--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -171,7 +171,7 @@
   %% Warnins if the set doesn't exist
   \@ifundefined{setlist@#2}{
     \@latex@error{Couldn't find set #2. Did you remember to do \string\makeset{#2}{}? }
-    \stop
+    \stop\bye
   }{}
   %% Sets the current setlist from the variable
   %% generated in makeset
@@ -230,9 +230,10 @@
     %% \incl = \ input because otherwise latexpanded would try.
     %% to input the file
     \IfFileExists{\@exercisesDir/\exerciseFile}{
-    \incl{\@exercisesDir/\exerciseFile}
+      \incl{\@exercisesDir/\exerciseFile}
     }{
-      \@latex@error{Could not find \@exercisesDir/\exerciseFile. Maybe it is because the default exercise directory is now changed to the same directory that your main file is in. To set default exercise directory to exercises, do \string\setExercisesDir{exercises}}{}
+      \@latex@error{Could not find \@exercisesDir/\exerciseFile. Maybe it is because the default exercise directory is now changed to the same directory that your main file is in. To set default exercise directory to exercises, do \string\exercisebanksetup{exercise directory=exercises}}{}
+      \stop\bye
     }
 
     %% More triggers
