added soft -beta in version

--- a/docs/exercisebank-doc.tex
+++ b/docs/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.1.0b51 - 2018/04/06
-%% The LaTeX package exercisebank - version v0.1.0 (2018/04/06) build 51
+%% exercisebank v0.1.0-betab51 - 2018/04/06
+%% The LaTeX package exercisebank - version v0.1.0-beta (2018/04/06) build 51
 %% #PACKAGE.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -41,7 +41,7 @@
       \path[fill=yellow!50!black,draw=none] (interior.south west) rectangle node[white]{\Huge\bfseries !} ([xshift=4mm]interior.north west);
       },
     drop fuzzy shadow,#1}
- \title{Exercise bank - Manual\\{\normalsize v0.1.0}}
+ \title{Exercise bank - Manual\\{\normalsize v0.1.0-beta}}
  \makeatother
 \let\dac\docAuxCommand
 \long\def\keyDef#1#2#3#4{\begin{docKey}{#1}{=\meta{#2}}{\meta{default}=#3}#4\end{docKey}}
@@ -57,7 +57,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.1.0{\\[-0.5em]\footnotesize(build 51)}}}
+\title{{exercisebank - manual\\ v0.1.0-beta{\\[-0.5em]\footnotesize(build 51)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -363,7 +363,7 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
   v0.0.5b46&2018/04/03&\begin{itemize}
     \item Fixed partproblems and solutions to fit on pages using \dac{filbreak}.
   \end{itemize}\\
-  v0.1.0&2018/04/06&\begin{itemize}
+  v0.1.0-beta&2018/04/06&\begin{itemize}
     \item \begin{marker}Backward incompability from v0.0.5:Removed default exercise directory! \end{marker} Use \dac{exercisebanksetup}\brackets{exercise directory=exercises} if you used the package before 2018/04/06!
     \item Fixed title of documentation to match actual package.
     \item Fixed weird paragraph styling when displaying solutions
